--- a/kind/metallb-config.yml
+++ b/kind/metallb-config.yml
@@ -1,17 +1,15 @@
-# Not sure if the ConfigMap below is needed - found it via co-pilot but it didn't really work and it suggested an old deployment: 0.13
-# and when I resorted to the official docs to get the latest version and documentation I could not see it in the installation part.
-# apiVersion: v1
-# kind: ConfigMap
-# metadata:
-#   namespace: metallb-system
-#   name: config
-# data:
-#   config: |
-#     address-pools:
-#     - name: default
-#       protocol: layer2
-#       addresses:
-#       - 172.20.255.200-172.20.255.250
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  namespace: metallb-system
+  name: config
+data:
+  config: |
+    address-pools:
+    - name: default
+      protocol: layer2
+      addresses:
+      - 172.20.255.200-172.20.255.250
 ---
 apiVersion: metallb.io/v1beta1
 kind: IPAddressPool
@@ -20,7 +18,7 @@ metadata:
   namespace: metallb-system
 spec:
   addresses:
-  - 172.20.255.200-172.20.255.250
+  - 172.21.255.200-172.21.255.250
 ---
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
